able to send a static file which will be react spa from api

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "axios": "*",
     "core-js": "*",
     "cors": "*",
-    "regenerator-runtime": "*",
-    "graphql-yoga": "*"
+    "graphql-yoga": "*",
+    "regenerator-runtime": "*"
   },
   "devDependencies": {
     "@babel/cli": "*",
