--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
     "react-dom": "^16.12.0",
     "react-google-login": "^5.0.7",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2"
   },
   "proxy": "http://localhost:8000",
   "scripts": {
