--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
-    "axios": "*",
+    "axios": "^0.19.0",
     "core-js": "*",
     "cors": "*",
     "graphql-yoga": "*",
