--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "core-js": "*",
+    "core-js": "^3.6.0",
     "cors": "*",
     "graphql-yoga": "*",
     "regenerator-runtime": "*"
